# SARAB1

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makeIt.sh
cmake/: toolchain.cmake
comp/GPIO/include/: GPIO.h
comp/GPIO/src/: GPIO.cpp
comp/I2C/include/: I2CDevice.h
comp/I2C/src/: I2CDevice.cpp
comp/SPI/include/: SPIDevice.h
comp/SPI/src/: SPIDevice.cpp
configs/: easyloggingpp.conf
patches/: sqlparser.patch
plat/GPIO/include/: GPIO.h
plat/GPIO/src/: GPIO.cpp
plat/I2C/include/: I2CDevice.h
plat/I2C/src/: I2CDevice.cpp
plat/include/: typeAliases.h
plat/os_wrappers/include/: .os_epoll.h.swp  os_file.h  os_socket.h
plat/os_wrappers/src/: .os_epoll.cpp.swp  os_epoll.cpp  os_file.cpp
plat/statemachine/example/: actions.h  main.cpp  states.cpp  states.h
prod/: main.cpp
src/: CMakeLists.txt
src/plat/GPIO/include/: GPIO.h
src/plat/GPIO/src/: GPIO.cpp
src/plat/I2C/include/: I2CDevice.h
src/plat/I2C/src/: I2CDevice.cpp
src/plat/os_wrappers/include/: os_carray.h  os_epoll.h  os_file.h  os_socket.h  os_thread.h
src/plat/os_wrappers/src/: os_epoll.cpp  os_file.cpp  os_socket.cpp
src/plat/statemachine/example/: actions.cpp  motor.cpp  motor.h
src/plat/unit/include/: unit.h
src/plat/unit/src/: unit.cpp
src/plat/utils/include/: defs.h  utils.h
src/plat/utils/src/: utils.cpp
src/prod/: main.cpp
src/prod/main_app/include/: main_app.h
src/prod/main_app/src/: main.cpp  main_app.cpp
src/units/main_unit/include/: main_unit.h
src/units/main_unit/src/: main_unit.cpp
src/units/sqlparser/include/: .sqlparser_unit.h.swp  sqlparser_unit.h
src/units/sqlparser/src/: sqlparser_unit.cpp
